--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MainActivity"
-    tools:showIn="@layout/app_bar_navigation">
+    tools:context=".MainActivity">
 
     <RelativeLayout
         style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin">
@@ -25,8 +24,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
             android:indeterminate="false"
             android:max="100"
@@ -41,8 +38,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/installProgress"
             android:minHeight="15dp"
@@ -53,17 +48,33 @@
             android:id="@+id/modsGridFrame"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_alignParentRight="true"
             android:layout_below="@+id/textView"
             android:layout_above="@+id/linearLayout"
             android:layout_alignParentEnd="true">
 
-            <org.askerov.dynamicgrid.DynamicGridView
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/list_empty_tip"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/list_empty"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/modsGrid"
-                android:layout_width="1000dp"
-                android:layout_height="wrap_content"
-                android:numColumns="1"
-                android:columnWidth="1000dp" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:transcriptMode="alwaysScroll"
+                android:visibility="gone" />
+
         </FrameLayout>
 
         <GridLayout
@@ -71,10 +82,21 @@
             android:layout_height="wrap_content"
             android:id="@+id/linearLayout"
             android:columnCount="3"
-            android:rowCount="1"
+            android:rowCount="2"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_row="0"
+                android:layout_rowSpan="1"
+                android:layout_rowWeight="1"
+                android:layout_column="0"
+                android:layout_columnSpan="3"
+                android:layout_columnWeight="1"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/sort_tip" />
 
             <Button
                 android:id="@+id/addBtn"
@@ -85,7 +107,7 @@
                 android:layout_columnWeight="1"
                 android:enabled="false"
                 android:layout_gravity="fill_horizontal"
-                android:layout_row="0"
+                android:layout_row="1"
                 android:layout_rowSpan="1"
                 android:layout_rowWeight="1"
                 android:text="@string/btn_add" />
@@ -99,13 +121,13 @@
                 android:layout_columnWeight="1"
                 android:enabled="false"
                 android:layout_gravity="fill_horizontal"
-                android:layout_row="0"
+                android:layout_row="1"
                 android:layout_rowSpan="1"
                 android:layout_rowWeight="1"
                 android:text="@string/btn_remove" />
 
             <Button
-                android:id="@+id/changeOrderButton"
+                android:id="@+id/buildBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_column="2"
@@ -113,11 +135,12 @@
                 android:layout_columnWeight="1"
                 android:enabled="false"
                 android:layout_gravity="fill_horizontal"
-                android:layout_row="0"
+                android:layout_row="1"
                 android:layout_rowSpan="1"
                 android:layout_rowWeight="1"
-                android:text="@string/btn_changeorder" />
+                android:text="@string/btn_build" />
         </GridLayout>
 
     </RelativeLayout>
-</android.support.constraint.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
